# mi_proyecto_enpoint

./: .dockerignore  .gitattributes  Dockerfile  Miguel_Angel_Reyna_Ortega.txt  cliente_api.py  docker-compose.yml  frontend_console.py  frontend_flask.py  init.sh  supervisord.conf  validar_git.sh
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
app/: .dockerignore  Cargo.toml  Dockerfile
app/src/: main.rs
app/static/: style.css
templates/: base.html  datos_usuario.html  index.html  info.html  usuarios.html
