[package]
name = "apiGitHub"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
