[package]
name = "mi-proyecto-enpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
chrono = "0.4"
chrono-tz = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "charset"] }
